--- a/index.html
+++ b/index.html
@@ -10,19 +10,26 @@
     <link rel="stylesheet" href="./assets/css/form.css" />
   </head>
   <body>
-    <header></header>
-    <section>
-      <h1>What's on your Mind?</h1>
-      <form>
-        <label for="userName">User name</label><br />
-        <input type="text" id="userName" /><br />
-        <label for="title">Title:</label><br />
-        <input type="text" id="title" /><br />
-        <label for="content">Content</label><br />
-        <textarea type="text" id="content" ><br />
-        <input type="submit" value="Submit" />
-      </form>
-    </section>
+    <header>
+        <h1>Hello</h1>
+    </header>
+    <div class="container">
+        <section id="landing-page-image">
+            <img src="https://images.unsplash.com/photo-1716724854567-9ec995836d19?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyfHx8ZW58MHx8fHx8" alt="squirrel">
+        </section>
+        <section id="landing-page-form">
+            <h1>What's on your Mind?</h1>
+            <form>
+                <label for="userName">User name</label><br />
+                <input type="text" id="userName" /><br />
+                <label for="title">Title:</label><br />
+                <input type="text" id="title" /><br />
+                <label for="content">Content</label><br />
+                <textarea type="text" id="content" ><br />
+                    <input type="submit" value="Submit" />
+            </form>
+        </section>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/form.js"></script>
   </body>
