--- a/index.html
+++ b/index.html
@@ -3,34 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>My First Blog</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css"
     />
     <link rel="stylesheet" href="./assets/css/form.css" />
   </head>
   <body>
     <header>
-        <h1>Hello</h1>
+      <h1>Hello</h1>
     </header>
     <div class="container">
-        <section id="landing-page-image">
-            <img src="https://images.unsplash.com/photo-1716724854567-9ec995836d19?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHwyfHx8ZW58MHx8fHx8" alt="squirrel">
+      <div class="row">
+        <section class="col" id="landing-page-image">
+          <p>Honey Badger<br />Super Secret<br />Blog</p>
         </section>
-        <section id="landing-page-form">
-            <h1>What's on your Mind?</h1>
-            <form>
-                <label for="userName">User name</label><br />
-                <input type="text" id="userName" /><br />
-                <label for="title">Title:</label><br />
-                <input type="text" id="title" /><br />
-                <label for="content">Content</label><br />
-                <textarea type="text" id="content" ><br />
-                    <input type="submit" value="Submit" />
-            </form>
-        </section>
+        <div class="col mb-3" id="landing-page-form">
+          <h1>What's on your Mind?</h1>
+          <label for="text" class="form-label">Username</label>
+          <input type="text" id="userName" required />
+          <label for="title" class="form-label">Title</label>
+          <input type="text" id="title" required />
+          <label for="content" class="form-label">Content</label>
+          <textarea class="form-control" id="content" rows="3"></textarea>
+          <button id="submit-btn">Submit</button>
+        </div>
+      </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/assets/js/form.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.js"></script>
+    <!-- <script src="./assets/js/form.js"></script> -->
   </body>
 </html>
