--- a/index.html
+++ b/index.html
@@ -4,21 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My First Blog</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://code.jquery.com/ui/1.13.3/themes/base/jquery-ui.css"
-    />
     <link rel="stylesheet" href="./assets/css/form.css" />
   </head>
   <body>
     <header>
-      <h1>Hello</h1>
+      <button id="toggle-mode-btn">&#127774</button>
     </header>
     <div class="container">
       <div class="row">
@@ -27,7 +17,7 @@
         </section>
         <div class="col mb-3" id="landing-page-form">
           <h1>What's on your Mind?</h1>
-          <label for="text" class="form-label">Username</label>
+          <label for="userName" class="form-label">Username</label>
           <input type="text" id="userName" required />
           <label for="title" class="form-label">Title</label>
           <input type="text" id="title" required />
@@ -41,6 +31,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://code.jquery.com/ui/1.13.3/jquery-ui.js"></script>
-    <!-- <script src="./assets/js/form.js"></script> -->
+    <script src="./assets/js/form.js"></script>
   </body>
 </html>
